kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homework
  name: homework-deployment
spec:
  selector:
    matchLabels:
      app: homework-websrv
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: homework-websrv
    spec:
      dnsPolicy: Default
      volumes:
      - name: workdir-pvs
        persistentVolumeClaim:
          claimName: websrv-pvc 
      - name: workdir-cm
        configMap:
          name: websrv-info
      containers:
      - name: websrv
        image: roflmaoinmysoul/otus:v2.0
        resources:
          limits:
            memory: "40Mi"
            cpu: "100m"
        ports:
        - name: websrv-port
          containerPort: 8080
        volumeMounts:
        - mountPath: /homework
          name: workdir-pvs
        - mountPath: /homework/conf
          name: workdir-cm
        readinessProbe:
          httpGet:
            path: /index.html
            port: websrv-port
          initialDelaySeconds: 3
          periodSeconds: 5
        lifecycle:
          postStart:
            exec:
              command: 
              - sh
              - -c
              - |
                sed -i 's/SERVER_PORT = 8000/SERVER_PORT = 8080/' server.py 
                cat server.py >  /homework/server_test.py 
                sed -i '5a\        with open('"'"'/homework/conf/log_level'"'"') as fp:' server.py 
                sed -i '6a\             file_data = fp.read(1)' server.py 
                sed -i '10d' server.py 
                sed -i '9a\        self.wfile.write(b'"'"'Open file log_level: '"'"' + file_data.encode())' server.py 
          preStop:
            exec:
              command: ["sh", "-c", "rm -R /homework"]
      nodeSelector:
        homework: "true"
